WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211523
REGRESSION (
r260753
): Frequent crashes under TextIndicator's estimatedTextColorsForRange
https://bugs.webkit.org/show_bug.cgi?id=211523
Summary
REGRESSION (r260753): Frequent crashes under TextIndicator's estimatedTextCol...
Tim Horton
Reported
2020-05-06 12:00:13 PDT
REGRESSION (
r260753
): Frequent crashes under TextIndicator's estimatedTextColorsForRange
Attachments
Patch
(1.64 KB, patch)
2020-05-06 12:00 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-05-06 12:00:34 PDT
Created
attachment 398642
[details]
Patch
Tim Horton
Comment 2
2020-05-06 12:00:37 PDT
<
rdar://problem/62860203
>
Darin Adler
Comment 3
2020-05-06 12:05:43 PDT
Comment on
attachment 398642
[details]
Patch Thank you. Looks good.
EWS
Comment 4
2020-05-06 12:36:31 PDT
Committed
r261245
: <
https://trac.webkit.org/changeset/261245
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 398642
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug