REGRESSION (r260753): Frequent crashes under TextIndicator's estimatedTextColorsForRange https://bugs.webkit.org/show_bug.cgi?id=211523 <rdar://problem/62860203>

Reviewed by Darin Adler.

* page/TextIndicator.cpp:
(WebCore::estimatedTextColorsForRange):
TextIterator's node() getter can return null. r260753 accidentally refactored away the null check.


Canonical link: https://commits.webkit.org/224418@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261245 268f45cc-cd09-0410-ab3c-d52691b4dbfc